# math-stack-test

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  gmp-bridge.cpp
android/app/src/main/cpp/gmp-6.3.0/a.out.dSYM/Contents/Resources/DWARF/: a.out
android/app/src/main/cpp/gmp-6.3.0/a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
android/app/src/main/kotlin/com/example/gmp_test_app/: MainActivity.kt
ios/Flutter/: Debug.xcconfig  Generated.xcconfig.bak
ios/GMP.xcframework/: Info.plist
ios/GMP.xcframework/ios-arm64/: gmp.h
ios/Runner/: Info.plist  LinkerSymbolKeeper.m  gmp.h  gmp_dummy.c  linker_symbol_keeper.mm
ios/Runner.xcodeproj/: project.pbxproj  project.pbxproj.bak
lib/: cas_bridge.dart  main.dart  symbol_finder.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
